--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1,20 +1,31 @@
 /* Master Styles */
 h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+    color: #369;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 250%;
 }
+
 h2, h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
+    color: #444;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
 }
+
 body {
-  margin: 2em;
+    margin: 2em;
 }
+
 body, input[text], button {
-  color: #888;
-  font-family: "Roboto","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+    color: #888;
+    font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+
+.ng-valid[required] {
+    border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid {
+    border-left: 5px solid #a94442; /* red */
 }
 
 /*
@@ -22,7 +33,7 @@ body, input[text], button {
  * for the full set of master styles used by the documentation samples
  */
 
- /* Above section cotains styles from angular.io quick start example. Following section contains it from udemy course*/
+/* Above section cotains styles from angular.io quick start example. Following section contains it from udemy course*/
 
 .ng-touched.ng-invalid {
     border: 1px solid red;
