Changes to deploy app on GAE.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   {{title}}
 </h1>
 <favorites></favorites>
-<contact-form></contact-form>
+<!--<contact-form></contact-form>-->
+<signup-form></signup-form>
