--- a/src/app/contact/contact-form.template.html
+++ b/src/app/contact/contact-form.template.html
@@ -24,3 +24,4 @@
     </div>
     <button class="btn btn-primary" type="submit" [disabled]="!f.form.valid">Submit</button>
 </form>
+{{ f.value | json }}
